wwwroot/css/file-fb2-preview.css
.fb2-canvas-container {
    max-width: calc(var(--max-width) - 2em);
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 10em;
}

.fb2-cover > img,
.fb2-image-container > details > img {
    width: 100%;
    object-fit: cover;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.fb2-image-container > details > img {
    cursor: pointer;
}

.fb2-image-container > details > summary {
    text-align: center;
}

.fb2-image-container > details[open] > summary {
    display: none;
}

.fb2-image-container > details > summary > span {
    cursor: pointer;
    position: relative;
}

.fb2-image-container > details > summary > span::after {
    position: absolute;
    content: "";
    width: 0;
    bottom: 0;
    left: 50%;
    height: 0.025em;
    display: block;
    background: var(--foreground-color);
    transition: 150ms;
}

@media (hover: none) and (pointer: coarse) {
    .fb2-image-container > details > summary > span:hover::after {
        display: none;
    }
}

.fb2-image-container > details > summary > span:hover::after {
    width: 100%;
    left: 0;
}

.fb2-canvas-container > section > p {
    text-align: justify;
    text-indent: 2em;
    padding-top: 0.5em;
}

.fb2-canvas-container > section > p:first-child {
    padding-top: 0;
}

.fb2-canvas-container h1,
.fb2-canvas-container h2,
.fb2-canvas-container h3,
.fb2-canvas-container h4,
.fb2-canvas-container h5,
.fb2-canvas-container h6 {
    text-align: center;
}

.fb2-canvas-container h1 > *,
.fb2-canvas-container h2 > *,
.fb2-canvas-container h3 > *,
.fb2-canvas-container h4 > *,
.fb2-canvas-container h5 > *,
.fb2-canvas-container h6 > * {
    display: inline-block;
}

.fb2-canvas-container h1 > *:not(:last-child),
.fb2-canvas-container h2 > *:not(:last-child),
.fb2-canvas-container h3 > *:not(:last-child),
.fb2-canvas-container h4 > *:not(:last-child),
.fb2-canvas-container h5 > *:not(:last-child),
.fb2-canvas-container h6 > *:not(:last-child) {
    padding-right: 0.1em;
}

.fb2-canvas-container h1 > *:not(:first-child),
.fb2-canvas-container h2 > *:not(:first-child),
.fb2-canvas-container h3 > *:not(:first-child),
.fb2-canvas-container h4 > *:not(:first-child),
.fb2-canvas-container h5 > *:not(:first-child),
.fb2-canvas-container h6 > *:not(:first-child) {
    padding-left: 0.1em;
}

.fb2-canvas-container .cite-author {
    text-align: right;
}

.note-btn {
    position: relative;
    margin-right: 2em;
}

.note-btn::after {
    content: '';
    background-color: var(--foreground-color);
    mask: url(../icons/info-svgrepo-com.svg) no-repeat center;
    mask-size: cover;
    -webkit-mask: url(../icons/info-svgrepo-com.svg) no-repeat center;
    -webkit-mask-size: cover;
    height: 1.8em;
    width: 1.8em;
    position: absolute;
    background-repeat: no-repeat;
    background-size: cover;
    margin-right: 0.3em;
    display: inline-block;
    bottom: -0.6em;
    left: 0;
}

@media (width < 1000px) and (width > 800px) {
    .fb2-canvas-container {
        max-width: calc(var(--max-width) - 6em);
    }
}

